cc: Do not add already failed image decode tasks as dependencies.

When gpu decoding is used, do not add image tasks which have already
failed in decoding as dependencies for raster task.

BUG=606117
CQ_INCLUDE_TRYBOTS=tryserver.blink:linux_blink_rel

Review URL: https://codereview.chromium.org/1909953002

Cr-Commit-Position: refs/heads/master@{#389365}

Former-commit-id: 68f3b80bd5f76377e0b4bb067fd8e759d33cefc3